# MeshGeneratingTool

./: .clang-format  .gitignore  CMakeLists.txt  README.md  STEPFileReader.cpp
examples/highlightAlgorithm/: CMakeLists.txt  HighlightAlgorithm.cxx  IVtk_CustomInteractorStyle.cxx  IVtk_CustomSelectionPipeline.cxx  IVtk_SelectionAlgorithm.cxx
examples/netgenSamples/meshFromTopoDS/: CMakeLists.txt  main.cpp
examples/netgenSamples/surfMeshFromSTEP/: CMakeLists.txt  main.cpp
examples/ocaf/: CMakeLists.txt  ocafMain.cpp
examples/selectionAlgorithm/: CMakeLists.txt  IVtk_CustomInteractorStyle.cxx  IVtk_CustomInteractorStyle.hxx  IVtk_CustomSelectionPipeline.cxx  IVtk_CustomSelectionPipeline.hxx  IVtk_SelectionAlgorithm.cxx  README.md  SelectionAlgorithm.cxx  old.cxx
examples/selectionAlgorithm/geometrySample/: Ref_XYZ.stp
src/: CMakeLists.txt
src/CADManager/: CADFileManager.cpp  CADFileReader.cpp  CADFileReader.h  STEPFileReader.cpp  STEPFileReader.h  STLFileReader.cpp  STLFileReader.h  main.cpp  vtk_example.cpp
src/Document/: CMakeLists.txt  DocItemTypes.cpp  DocItemTypes.hpp  DocumentHandler.cpp  DocumentHandler.hpp
src/Document/DocumentUtils/: CMakeLists.txt  ComboBoxTypes.cpp  ComboBoxTypes.hpp  DefaultsParser.cpp  DefaultsParser.hpp  DisplayRulesParser.cpp  DisplayRulesParser.hpp  DocItemTypes.hpp  DocUtils.cpp  DocUtils.hpp  JsonParser.cpp  JsonParser.hpp  PropertiesParser.hpp
src/Document/Tests/: CMakeLists.txt  utDefaultsParser.cpp  utDocItemTypes.cpp  utDocumentHandler.cpp  utProperties.cpp  utPropertiesParser.cpp  utRun.cpp
src/GeometryCore/: CMakeLists.txt
src/GeometryCore/GUI/: ProgressBarPlugin.hpp
src/GeometryCore/Geometry/: Geometry.cpp  Geometry.h  GeometryFunctions.cpp  GeometryFunctions.h  GeometryImporter.cpp  GeometryImporter.h  TagMap.cpp  TagMap.h
src/GeometryCore/GeometryImporter/: GeometryImporter.cpp  GeometryImporter.h  STEPImporter.cpp  STEPImporter.h  STLImporter.cpp  STLImporter.h
src/GeometryCore/QVTKProgressBar/: ProgressBarPlugin.hpp
src/GeometryCore/STEPPlugin/: STEPImporter.cpp  STEPImporter.h  STEPPlugin.cpp  STEPPlugin.h  STEPPluginOperations.cpp  STEPPluginOperations.h  progressbar.h
src/GeometryCore/STLPlugin/: STLImporter.h  STLPluginOperations.cpp  STLPluginOperations.h
src/Kernel/: AppDefaults.hpp  AppQuickStart.cpp  CMakeLists.txt
src/Kernel/Config/: AppInfo.cpp  AppInfo.hpp  CMakeLists.txt
src/MeshCore/: CMakeLists.txt  Mesh.cpp  Mesh.h  MeshContainers.hpp
src/MeshCore/MGTMesh/: CMakeLists.txt  MGTMesh_Algorithm.cpp  MGTMesh_ProxyMesh.h
src/MeshCore/MGTMeshUtils/: CMakeLists.txt  MGTMeshUtils_ControlPoint.cpp  MGTMeshUtils_ViscousLayers.h
src/MeshCore/MeshDS/: CMakeLists.txt  MeshDS_ElementHolder.cpp  MeshDS_ElementHolder.h  MeshDS_Iterator.hpp  MeshDS_IteratorsAux.hpp  MeshDS_Macro.h  MeshDS_Mesh.cpp  MeshDS_Mesh.h  MeshDS_MeshObject.cpp  MeshDS_MeshObject.h
src/MeshCore/MeshHDS/: CMakeLists.txt  MeshHDS_Document.cpp  MeshHDS_Document.h  MeshHDS_Macro.h  MeshHDS_Mesh.cpp  MeshHDS_Mesh.h  MeshHDS_SubMesh.cpp  MeshHDS_SubMesh.h  MeshHDS_TSubMeshCollection.hpp
src/MeshCore/MeshMGT/: CMakeLists.txt  MeshMGT_Algorithm.cpp  MeshMGT_Algorithm.h  MeshMGT_ComputeError.hpp  MeshMGT_Macro.h  MeshMGT_Mesh.cpp  MeshMGT_Mesh.h  MeshMGT_MeshAttributes.cpp  MeshMGT_MeshAttributes.h  MeshMGT_SubMesh.cpp  MeshMGT_SubMesh.h
src/MeshCore/NetgenPlugin/: CMakeLists.txt  NetgenPlugin_Defs.hpp  NetgenPlugin_Internals.cpp  NetgenPlugin_Internals.h  NetgenPlugin_LibWrapper.cpp  NetgenPlugin_LibWrapper.h  NetgenPlugin_Macro.h  NetgenPlugin_MeshInfo.h  NetgenPlugin_Mesher.cpp  NetgenPlugin_Mesher.h  NetgenPlugin_Netgen2VTK.cpp  NetgenPlugin_NetgenLibWrapper.cpp  NetgenPlugin_NetgenLibWrapper.h  NetgenPlugin_Parameters.h  NetgenPlugin_ngDefs.h  NetgenPlugin_ngMeshInfo.cpp  NetgenPlugin_ngMeshInfo.h
src/Model/: CMakeLists.txt  Model.cpp  Model.h  Model.hpp  ModelDocParser.cpp  ModelDocParser.hpp  ModelDocumentHandler.h  ModelEventHandler.h  ModelLifecycleManager.cpp  ModelLifecycleManager.hpp  ModelManager.cpp  ModelManager.hpp  ProgressObserver.cpp  ProgressObserver.hpp
src/Model/GeometryCore/: CMakeLists.txt  Geometry.cpp  Geometry.hpp  GeometryActions.cpp  GeometryActions.hpp  GeometryView.cpp  GeometryView.hpp
src/Model/MeshCore/: CMakeLists.txt  Mesh.h
src/Model/ModelCommands/: CMakeLists.txt  Command.hpp  CommandStack.cpp  CommandStack.hpp
src/Model/ModelEvents/: CMakeLists.txt  IEventSubject.hpp  ModelSubject.cpp  ModelSubject.hpp
src/Model/ModelInterface/: CMakeLists.txt  ModelDataView.cpp  ModelDataView.hpp  ModelInterface.cpp  ModelInterface.hpp
src/Model/Tests/: CMakeLists.txt  utCommands.cpp
src/ModelInterface/: CMakeLists.txt  ModelInterface.cpp  ModelInterface.hpp  ModelManager.cpp  ModelManager.hpp
src/Shared/: CMakeLists.txt  DocumentHandler.cpp  DocumentHandler.hpp  JsonParser.cpp  JsonParser.hpp  SelectionHandler.cpp  SelectionHandler.hpp
src/UserInterface/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  mainwindow.cpp  mainwindow.h
src/UserInterface/Core/: CMakeLists.txt  DocumentHandler.cpp  DocumentHandler.h  JsonParser.cpp  JsonParser.h  MainWindow.cpp  MainWindow.h  MainWindow.hpp  PreferencesDialog.cpp  PreferencesDialog.h
src/UserInterface/Defaults/: AppDefaultColors.cpp  AppDefaultColors.h  AppDefaultColors.hpp  AppDefaults.cpp  AppDefaults.h  AppDefaults.hpp  AppInfo.h  AppSettings.cpp  AppSettings.h  AppSettings.hpp  AppTheme.cpp  AppTheme.h  AppTheme.hpp  CMakeLists.txt
src/UserInterface/Forms/: MainWindow.ui  MainWindow.ui.autosave  PreferencesDialog.ui  ProgressBar.ui  RibbonBarWidget.ui  mainwindow.ui
src/UserInterface/GraphicalUtils/: CMakeLists.txt  Configuration.h  ProgressBar.cpp  ProgressBar.h  PropertiesModel.cpp  PropertiesModel.h  PropertiesWidget.cpp  PropertiesWidget.h  TreeStructure.cpp  TreeStructure.h
src/UserInterface/ModelActionsHandler/: CMakeLists.txt  ModelActionsHandler.cpp  ModelActionsHandler.hpp
src/UserInterface/ModelHandling/: CMakeLists.txt
src/UserInterface/Rendering/: CMakeLists.txt  QIVtkSelectionPipeline.cpp  QIVtkUtils.cpp  (+14 more)
(+409 files in other folders)
