ADD_SUBDIRECTORY(Core)
ADD_SUBDIRECTORY(Defaults)
ADD_SUBDIRECTORY(ModelHandling)
ADD_SUBDIRECTORY(TreeStructure)
ADD_SUBDIRECTORY(Rendering)
ADD_SUBDIRECTORY(Widgets)
ADD_SUBDIRECTORY(Utils)

ADD_LIBRARY(UserInterface INTERFACE)

TARGET_LINK_LIBRARIES(UserInterface INTERFACE
  Core
  Defaults
  Rendering
  TreeStructure
  Utils
  Widgets
)