ADD_LIBRARY(MGTMeshUtils
    MGTMeshUtils_ControlPoint.cpp
)

if(WIN32)
    TARGET_LINK_LIBRARIES(MGTMeshUtils PUBLIC
        ${OpenCASCADE_LIBRARIES}
        ${VTK_LIBRARIES})
else()
    TARGET_LINK_LIBRARIES(MGTMeshUtils PUBLIC
        ${OCC_LIBRARIES}
        ${VTK_LIBRARIES})
endif()

TARGET_INCLUDE_DIRECTORIES(MGTMeshUtils PUBLIC
)
